# orderbook-fix

./: .clang-format  .gitignore  ARCHITECTURE.md  CMakeLists.txt  Dockerfile  Makefile  README.md  docker-compose.yml
.github/workflows/: ci.yml
bench/: cacheline_study.cpp  regress.py  replay_bench.cpp
bench/data/: session_seed.txt
bench/results/: bench_200k_fifo.json  bench_fifo.json  bench_local.json  bench_prorata_50k.json  bench_smoke_baseline.json  cacheline_study.json
docs/: differs-from-orderbook-sim.md  fix-session.md  pro-rata-matching.md
src/: main.cpp
src/core/: events.h  matcher.cpp  matcher.h  order.h  order_book.cpp  order_book.h  price_level.h  types.h
src/fix/: messages.h  parser.cpp  parser.h  serializer.cpp  serializer.h  session.cpp  session.h
src/net/: tcp_server.cpp  tcp_server.h
src/obs/: histogram.h  logger.h
tests/fuzz/: fix_parser_fuzz.cpp
tests/integration/: concurrent_sessions_stress_test.cpp  session_e2e_test.cpp
tests/unit/: fix_parser_test.cpp  fix_session_decision_table_test.cpp  fix_session_heartbeat_test.cpp  fix_session_resend_test.cpp  fix_session_test.cpp  matcher_test.cpp  order_book_test.cpp  price_level_test.cpp  pro_rata_test.cpp  property_test.cpp
